Удалена разметка для списка товаров, корзины и заказа

--- a/src/index.html
+++ b/src/index.html
@@ -7,75 +7,12 @@
   <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 
-<body class="no-scroll">
+<body>
   <main class="product-listing-wrapper">
-    <section class="products">
-      <ul class="products-list">
-        <li class="product">
-          <img src="assets/images/1.jpg" alt="Выкатной детский диван Зайка производитель фабрика Blanes - Фото" class="product__img">
-          <div class="product__content">
-            <h2 class="product__title">Выкатной детский диван Зайка производитель фабрика Blanes</h2>
-            <span class="product__price">11740</span>
-          </div>
-          <div class="product__btn-group">
-            <button type="button" class="btn">Заказать</button>
-            <button type="button" class="btn btn-cart">В корзину</button>
-          </div>
-        </li>
-        <li class="product">
-          <img src="assets/images/1.jpg" alt="Выкатной детский диван Зайка производитель фабрика Blanes - Фото" class="product__img">
-          <div class="product__content">
-            <h2 class="product__title">Выкатной детский диван Зайка производитель фабрика Blanes</h2>
-            <span class="product__price">11740</span>
-          </div>
-          <div class="product__btn-group">
-            <button type="button" class="btn">Заказать</button>
-            <button type="button" class="btn btn-cart">В корзину</button>
-          </div>
-        </li>
-      </ul>
-    </section>
   </main>
 
-  <div class="cart">
-    <div class="cart__notice">
-      Вы добавили в корзину:
-    </div>
-    <div class="cart__content">
-      <img src="assets/images/1.jpg" alt="" class="cart__product-img">
-      <div class="cart__product-info">
-        <h2 class="cart__product-title">
-          Выкатной детский диван Зайка производитель фабрика Blanes
-        </h2>
-        <span class="cart__product-price">11740</span>
-      </div>
-      <button type="button" class="btn btn-close">&times;</button>
-    </div>
-    <button type="button" class="btn cart__btn">Перейти в корзину</button>
-  </div>
-
-  <div class="order-popup">
-    <form action="#" class="form order-popup__wrapper">
-      <h2 class="order-popup__title">
-        Выкатной детский диван Зайка производитель фабрика Blanes
-      </h2>
-      <div class="order-popup__info">
-        <img src="assets/images/1.jpg" alt="Выкатной детский диван Зайка производитель фабрика Blanes - Фото" class="order-popup__img">
-        <span class="order-popup__price">858558</span>
-      </div>
-      <fieldset class="order-popup__comment">
-        <label for="comment" class="order-popup__comment-label">Комментарий<br>
-          к заказу:</label>
-        <textarea name="comment" id="comment" class="order-popup__comment-textarea"></textarea>
-      </fieldset>
-      <label for="phone" class="order-popup__phone-label">Ваш телефон:</label>
-      <input id="phone" name="phone" type="text" class="order-popup__phone-input">
-      <button type="submit" class="btn order-popup__submit">Отправить</button>
-    </form>
-    <button type="button" class="btn btn-close order-popup__btn-close">&times;</button>
-  </div>
-
   <script src="api/products.js"></script>
+  <script src="./assets/script/script.js"></script>
 </body>
 
 </html>
