page added. BaltikovaNP

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>Home page</title>
   </head>
 
   <body>
-    <main class="product-listing-wrapper">
+    <main class="product-listing-wrapper center">
     </main>
 
-    <script src="api/products.js"></script>
+    <main class="pop-up-cart"></main>
+
+    <script src="./api/page.js"></script>
   </body>
 </html>
