add button close cart

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
     <div class="cart-popup-wrapper js-cart-popup-wrapper dn">
       <div class="cart-pop-up-title">
         Вы добавили в корзину
+        <div class="close-cart-popup js-close-cart-popup">
+          &times;
+        </div>
       </div>
       <div class="cart-popup-list-product js-list-product">
       </div>
@@ -19,6 +22,7 @@
         Перейти в корзину
       </button> 
     </div> 
+    
     <div class="order-popup-main-wrapper js-order-popup dn">
       <div class="order-popup-wrapper">
         <div class="close-order-popup js-close-order-popup">
