fix pull requests

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="cart-popup-list-product js-list-product">
       </div>
-      <button class="cart-popup-button-basket">
+      <button class="cart-popup-button-basket" type="button">
         Перейти в корзину
       </button> 
     </div> 
@@ -48,7 +48,7 @@
           </span>
           <div class="wrapper-form-phone">
             <input class="input-user-phone">
-            <button class="order-popup-busket-send-order js-add-item-busket">
+            <button class="order-popup-busket-send-order js-add-item-busket" type="button">
               Заказать
             </button>
           </div>
@@ -57,6 +57,6 @@
     </body>
   
   <script src="api/products.js"></script>
-  <script src="scripts/listener.js"></script>
+  <script src="scripts/productListing.js"></script>
   <script src="scripts/renderData.js"></script>
 </html>
