feat: добавить класс Card
Добавить класс Card для рендера карт товаров

Добавить метод классу Card для генерации карточки

Реализовать отрисовку карточек на страницу

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
     <main class="product">
       <ul class="product__list"></ul>
     </main>
+
     <template id="card-template">
-      <li class="product__item card">
+      <li class="card">
         <img src="#" alt="#" class="card__image" />
         <div class="card__about">
           <h2 class="card__title"></h2>
@@ -26,7 +27,9 @@
         </div>
       </li>
     </template>
-
-    <script src="api/products.js"></script>
+    <script src="./api/products.js"></script>
+    <script src="./utils/constants.js"></script>
+    <script src="./blocks/card/card.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
