feat: отрефакторить код
Добавить title html

Перенести обрабочики открытия Popup в колбек new Card

Удалить дублирующийся код в PopupBasket и PopupOrder,
добавить обработчик на кнопку в корзину

Переименовать константы в конфиге POPUP_CONFIG

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="index.css" />
+    <title>Task</title>
   </head>
 
   <body class="root">
@@ -53,13 +54,11 @@
             ×
           </button>
         </div>
-
         <form class="popup__form">
           <div class="popup__order-description">
             <img class="popup__image popup__image_order" src="#" alt="#" />
             <p class="popup__price popup__price_order"></p>
           </div>
-
           <div class="popup__comment">
             <label for="comment" class="popup__input-label"
               >Комментарий к заказу:</label
@@ -69,11 +68,9 @@
               class="popup__input popup__input_comment"
             ></textarea>
           </div>
-
           <label for="input" class="popup__input-label popup__input-label_phone"
             >Ваш телефон*:</label
           >
-
           <input
             required
             type="number"
