Выполненное тестовое задание

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,25 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
-    <main class="product-listing-wrapper">
-    </main>
+
+    <main class="product-listing-wrapper"></main>
+    <div class="product-popup-card"></div>
+    <div class="product-popup-order"></div>
 
     <script src="api/products.js"></script>
+
+    <script src="Components/Catalog/Catalog.js"></script>
+    <link rel="stylesheet" href="Components/Catalog/Catalog.css">
+
+    <script src="Components/Popup-Card/Popup-Card.js"></script>
+    <link rel="stylesheet" href="Components/Popup-Card/Popup-Card.css">
+
+    <script src="Components/Popup-Order/Popup-Order.js"></script>
+    <link rel="stylesheet" href="Components/Popup-Order/Popup-Order.css">
+    
   </body>
 </html>
