--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/popup.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <title>Document</title>
+</head>
+
+<body>
     <main class="product-listing-wrapper">
+        <section class="products">
+            <div class="products__container"></div>
+        </section>
+        <div class="pop-up" id="js-customer-pop-form_order">
+            <div class="pop-up__overlay" onclick="popClose(event);"></div>
+            <div class="pop-up__content-wrapper">
+                <div class="pop-up__content">
+                    <button class="pop-up__close-button" onclick="popClose(event);">
+                        <svg class="svg">
+                            <use xlink:href="#close"></use>
+                        </svg>
+                    </button>
+                    <form action="/" class="pop-up__form">
+                        <div class="pop-up__product-name"></div>
+                        <div class="pop-up__product-info">
+                            <img src="" alt="" class="pop-up__product-img">
+                            <div class="pop-up__product-price">
+                                <span class="pop-up__product-price-value"></span>
+                                <span class="pop-up__product-price-currency">руб.</span>
+                            </div>
+                        </div>
+                        <div class="pop-up__order-text">
+                            <label for="popup-textarea">
+                                Комментарий<br> к заказу:
+                            </label>
+                            <textarea name="order_text" id="popup-textarea" class="pop-up__textarea"></textarea>
+                        </div>
+                        <div class="pop-up__phone">
+                            <label for="popup-phone-input">Ваш телефон *:</label>
+                            <input type="tel" id="popup-phone-input" required class="pop-up__phone-input">
+                        </div>
+                        <div class="pop-up__buttons">
+                            <button class="pop-up__submit-button button button_cerise" type="submit">Отправить</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="pop-up pop-up_cart cart-pop-up" id="js-customer-pop-form_cart">
+            <div class="pop-up__content-wrapper">
+                <div class="pop-up__content">
+                    <div class="cart-pop-up__header">
+                        <h4 class="cart-pop-up__title">Вы добавили в корзину:</h4>
+
+                    </div>
+                    <div class="cart-pop-up__body">
+                        <ul class="cart-pop-up__list"></ul>
+                        <a href="/" class="cart-pop-up__link button button_cerise">
+                            Перейти в корзину
+                        </a>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </main>
+    <svg style="display: none;">
+        <symbol id="close" viewBox="0 0 329.26933 329">
+            <g>
+                <path
+                    d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0" />
+            </g>
+        </symbol>
+
+
+    </svg>
+
 
     <script src="api/products.js"></script>
-  </body>
+</body>
+
 </html>
