--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,29 @@
+<!-- @format -->
+
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-  </head>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="https://www.pulscen.ru/system/ckeditor_assets/attachments/204203/zeroing.css" />
+		<link rel="stylesheet" href="css/popap.css" />
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body class="js-body">
+		<div class="main__content">
+			<div class="iconBasket">
+				<img src="../assets/basket.png" alt="" class="iconBasket__img" />
+				<div class="iconBasket__current">0</div>
+			</div>
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+			<div class="listing"> </div>
 
-    <script src="api/products.js"></script>
-  </body>
+			<div class="modal-wrapper"> </div>
+		</div>
+	</body>
+
+	<script src="index.js"></script>
+	<!-- <script src="popap.js"></script> -->
 </html>
