--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 	<body class="js-body">
 		<div class="main__content">
 			<div class="iconBasket">
-				<img src="img/basket.png" alt="" class="iconBasket__img" />
+				<img src="assets/img/basket.png" alt="" class="iconBasket__img" />
 				<div class="iconBasket__current">0</div>
 			</div>
 
