--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
@@ -9,5 +10,6 @@
     </main>
 
     <script src="api/products.js"></script>
+    <script src = "index.js"></script>
   </body>
 </html>
