--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>apress-frontend_test_task</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/popup.css">
     <link rel="stylesheet" href="css/product.css">
@@ -85,5 +87,8 @@
     </template>
 
     <script src="api/products.js"></script>
+    <script src="scripts/popup.js"></script>
+    <script src="scripts/product.js"></script>
+    <script src="scripts/render.js"></script>
   </body>
 </html>
