fix: fixed popup_order textarea text positioning

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
               <span class="popup__input_caption">
                 <b>Комментарий <br>к заказу:</b>
               </span>
-              <input type="textarea" name="comment" class="popup__input_textarea">
+              <textarea name="comment" class="popup__input_textarea"></textarea>
             </div>
 
             <div class="popup__input popup__input_number">
