chore: minor refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
     <div class="popup popup__order">
       <div class="popup__container popup__container_order">
-        <h2 class="popup__header popup__title"></h2>
+        <h2 class="popup__title"></h2>
         <button type="reset" class="popup__button_close">
           <img class="popup__image" src="assets/thumbnails/cross_grey.png">
         </button>
